# Green-FL-Project

./: .gitignore  README.md  app.py  client_app.py  custom_strategy.py  local_test_run.sh  ludovic  ludovic.pub  optimizer_expert.py.py  optimizer_report.py  optimizer_update.py  pyproject.toml  requirements.txt  script_slurm.slurm  server_app.py  sever.py
outputs/2026-03-20/03-42-29/: best_model.pth  best_model_info.txt
outputs/2026-03-20/03-52-10/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
outputs/2026-03-22/16-10-04/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
outputs/2026-03-22/16-42-49/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
outputs/2026-03-22/16-46-55/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
outputs/2026-03-22/17-14-36/: best_model.pth  best_model_info.txt
outputs/2026-03-22/17-24-06/: best_model.pth  best_model_info.txt
outputs/2026-03-22/17-28-30/: best_model.pth  best_model_info.txt
outputs/2026-03-22/21-18-43/: best_model.pth  best_model_info.txt
outputs/2026-03-22/21-29-13/: emission.csv
outputs/2026-03-22/22-07-10/: best_model.pth  best_model_info.txt
outputs/2026-03-23/04-10-32/: best_model.pth  best_model_info.txt
outputs/2026-03-23/04-58-40/: best_model.pth  best_model_info.txt
outputs/2026-03-23/05-09-53/: best_model.pth  best_model_info.txt
pytorchexample/: client_app.py  custom_strategy.py  model.py  model_vision_transformers.py  server_app.py  task.py
wandb/: latest-run
wandb/offline-run-20260323_041050-zvw3wk25/: run-zvw3wk25.wandb
wandb/offline-run-20260323_045847-spew8c3z/: run-spew8c3z.wandb
wandb/offline-run-20260323_051000-ganslh5t/: run-ganslh5t.wandb
wandb/run-20260329_182443-1erkd9vu/: run-1erkd9vu.wandb
wandb/run-20260329_182446-fn35rh5t/: run-fn35rh5t.wandb
wandb/run-20260329_183239-er8thbog/: run-er8thbog.wandb
wandb/run-20260329_183239-unn9khvi/: run-unn9khvi.wandb
wandb/run-20260329_184202-0gyzjqsm/: run-0gyzjqsm.wandb
wandb/run-20260329_184202-0soqr5f7/: run-0soqr5f7.wandb
(+61 files in other folders)
