[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [ "flwr[simulation]>=1.26.0", "flwr-datasets[vision]>=0.5.0", "torch==2.8.0", "torchvision==0.23.0", "wandb>=0.17.8",]

[tool.flwr.app]
publisher = "flwrlabs"

[superlink.local.options]
num-supernodes = 0
num-supernodes-training = 0
num-supernodes-evaluation = 0

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
strategy = "fedavg"
num-server-rounds = 1
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.01
batch-size = 32
fraction-train = 1.0
num-supernodes = 3
num-supernodes-training = 3
num-supernodes-evaluation = 3
proximal-mu = 0.23
alpha = 0.1
self-balancing = true

[tool.hatch.build.targets.wheel]
packages = [ ".",]
